fix widths on mobile on home

--- a/src/css/components/_episodes.sass
+++ b/src/css/components/_episodes.sass
@@ -5,6 +5,9 @@
   cursor: pointer
   border-left: 0px solid $color-green
 
+  @media only screen and (max-width: 767px)
+    padding: 11px 8px 12px
+
   &:hover
     border-left: 5px solid $color-green
 
@@ -59,8 +62,7 @@
 
     .#{$ns}-episode--number
       line-height: 1.2
-      margin-left: -7px
-      
+
       span
         opacity: 0
         display: block
